02_echo-application/install_all.yaml
---
# First we need to create a namespace - it will keep all our resources related to 'echo' application
apiVersion: v1
kind: Namespace
metadata:
  name: echo

---
# This will create 'database' POD, which will listen on port 5432 and log all received messages to /tmp/chat.log.
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  namespace: echo
  labels:
    app: database
spec:
  terminationGracePeriodSeconds: 2
  containers:
  - name: db
    image: alpine
    command: ["/bin/sh", "-c"]
    # Netcat listening on port 5432 and appending all received messages to /tmp/chat.log
    args: ["apk add --no-cache netcat-openbsd && touch /tmp/chat.log && nc -lk -p 5432 >> /tmp/chat.log"]
    ports:
    - containerPort: 5432

---
# Service for the database POD, which will allow other PODs to communicate with it using the name 'db-service' and port 5432.
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: echo
spec:
  selector:
    app: database
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432

---
# This will create 'echo' POD, which will listen on port 8080. It will receive messages from clients, send a copy to the database service, and respond back to the client with an echo message.
apiVersion: v1
kind: Pod
metadata:
  name: echo-pod
  namespace: echo
  labels:
    app: echo-app
spec:
  terminationGracePeriodSeconds: 2
  containers:
  - name: echo-app
    image: alpine
    command: ["/bin/sh", "-c"]
    # Loop listening on port 8080.
    # Receives a message, sends it to the database service (db-service) and simultaneously responds to the client.
    args:
    - |
      apk add --no-cache nmap-ncat
      echo "Echo server started..."
      ncat -lk -p 8080 -c "while read msg; do \
        ts=\$(date '+%Y-%m-%d %H:%M:%S'); \
        echo \"Log: [Pod IP: \$MY_POD_IP] [Time: \$ts]: \$msg\" | nc -w 2 db-service 5432 >/dev/null 2>&1 & \
        echo \"Received: '\$msg' [Pod IP: \$MY_POD_IP] [Time: \$ts]\"; \
      done"
    ports:
    - containerPort: 8080

---
# Service for the echo POD, which will allow clients to communicate with it using the name 'echo-service' and port 8080.
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: echo
spec:
  selector:
    app: echo-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
# This will create 'client' POD, which will be used to send messages to the echo service and receive responses. It will have netcat and curl installed for testing purposes.
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  namespace: echo
spec:
  terminationGracePeriodSeconds: 2
  containers:
  - name: client
    image: alpine
    command: ["/bin/sh", "-c", "apk add --no-cache netcat-openbsd curl && sleep 3600"]
